# Secretary

./: .env.example  .gitignore  pyproject.toml
secretary/: __init__.py  __main__.py
secretary/commands/: __init__.py
secretary/common/canvas/: __init__.py  assignments.py  courses.py
secretary/common/todoist/: __init__.py
