[tool.poetry]
name = "secretary"
version = "0.1.0"
description = ""
authors = ["seth shoemaker <contact@sethshoemaker.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
requests = "^2.31.0"
inquirer = "^3.2.3"
todoist-api-python = "^2.1.3"
rich = "^13.7.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
